# Sala-Cinema-Rust

./: Cargo.toml
src/client/: main.rs
src/sala_cinema/: lib.rs  mongodb_service.rs
src/sala_cinema/models/: mod.rs
src/sala_cinema/networking/: mod.rs
src/server/: main.rs  metodi_test.rs
