[package]
name = "Sala-Cinema-Rust"
version = "0.1.0"
authors = ["banditopazzo <banditopazzo@gmail.com>"]
publish = false

[dependencies]
bson = "0.10.0"
mongodb = "0.3.7"
serde = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1.17"
tokio-core = "0.1"
tokio-io = "0.1"
bytes = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
tokio-serde-json = { git = "https://github.com/carllerche/tokio-serde-json" }

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[lib]
name = "sala_cinema"
path = "src/sala_cinema/lib.rs"
